# template-python-uv

./: .gitignore  CONTRIBUTING.md  LICENSE  QUICK_REFERENCE.md  README.md  SETUP_QUICK_REF.md  portable_python_readme.md  pyproject.toml  setup.sh  verify_python_version.sh
src/: __init__.py  main.py
tests/: test_main.py
